<resources>
    <string name="app_name">Siangsa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_greeting">Selamat Datang</string>
    <string name="nav_header_username">Dedek Cantik</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Left Menu-->
    <string name="left_menu_paket">Paket</string>
    <string name="left_menu_layanan">Layanan</string>
    <string name="left_menu_tagihan">Tagihan</string>
    <string name="left_menu_lapor">Lapor</string>
    <string name="left_menu_info">Info</string>

    <!--NEW Left Menu-->
    <string name="left_menu_status_langganan">Status Langganan</string>

    <!--Bottom Menu-->
    <string name="btm_menu_profile">Profile</string>
    <string name="btm_menu_notif">Pemberitahuan</string>
    <string name="btm_menu_message">Pesan</string>
    <string name="btm_menu_about">Tentang</string>
    <string name="btm_menu_logout">Keluar</string>

    <!--New Bottom Menu-->
    <string name="btm_menu_beranda">Beranda</string>
    <string name="btm_menu_paket">Paket</string>
    <string name="btm_menu_bantuan">Bantuan</string>

    <string name="txt_welcome_login">Selamat datang di layanan SIANGSA !</string>
    <string name="txt_welcome_login_details">Masukan data email dan kata sandi Anda dengan benar untuk masuk ke dashboard akun</string>
    <string name="txt_welcome_regis_details">Masukan data sesuai kolom di bawah ini dengan benar untuk mendaftar</string>
    <string name="txt_login_email">Email</string>
    <string name="txt_login_password">Password</string>
    <string name="txt_login_forgot"><u>Lupa Kata Sandi</u></string>
    
    <string name="label_id_layanan">No ID Layanan</string>
    <string name="label_nama">Nama</string>
    <string name="label_alamat">Alamat</string>
    <string name="label_nomor_tel">Nomor Telepon</string>
    <string name="label_email">Email</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Layanan Paket Satu</string>
    <string name="slide_1_desc">Silahkan memilih layanan paket siangsa satu!</string>

    <string name="slide_2_title">Layanan Paket Dua</string>
    <string name="slide_2_desc">Silahkan memilih layanan paket siangsa dua!</string>

    <string name="slide_3_title">Layanan Paket Tiga</string>
    <string name="slide_3_desc">Silahkan memilih layanan paket siangsa tiga!</string>

    <string name="slide_4_title">Layanan Paket Empat</string>
    <string name="slide_4_desc">Silahkan memilih layanan paket siangsa empat!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="warning_complete_regis_data">Mohon Lengkapi Data Anda</string>




</resources>
