<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <LinearLayout
        android:id="@+id/details_user_paket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/paket_layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_marginRight="@dimen/length_10"
            android:layout_marginTop="@dimen/length_40"
            android:stretchColumns="1"
            android:orientation="vertical">

            <TableRow>
                <TextView
                    android:id="@+id/id_layanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_id_layanan"
                    android:textColor="@color/default_black"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edt_label_layanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:textColor="@color/color_disabled"
                    android:text="S-14045"
                    android:maxLength="15"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/id_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nama"
                    android:textColor="@color/default_black"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/length_5"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Dedek Cantik"
                    android:maxLength="50"
                    android:editable="false"
                    android:textColor="@color/color_disabled"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/id_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_alamat"
                    android:textColor="@color/default_black"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/length_5"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edt_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Jalan Kedung Cina, RT 4 RW 5 no 10, Kec. Bandengan"
                    android:maxLength="100"
                    android:editable="false"
                    android:textColor="@color/color_disabled"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/id_no_telpon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nomor_tel"
                    android:textColor="@color/default_black"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/length_5"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edt_no_telpon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0812345678910"
                    android:maxLength="32"
                    android:editable="false"
                    android:textColor="@color/color_disabled"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/id_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"

                    android:textColor="@color/default_black"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/length_5"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="siangsa@angsabebek.com"
                    android:maxLength="32"
                    android:editable="false"
                    android:textColor="@color/color_disabled"
                    />
            </TableRow>
        </TableLayout>

        <ImageView
            android:layout_below="@id/edt_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/paket"/>
    </LinearLayout>

</ScrollView>
